attached_assets/Pasted-Skip-to-content-Keyboard-Repository-navigation-Code-Iss_1772619196253.txt
Skip to content
Keyboard
Repository navigation
Code
Issues
Actions
Make Apk CI
Improve keyboard resizing and clipboard synchronization #15
Annotations
1 error
Build-Apk
failed 5 minutes ago in 37s
4s
2s
0s
0s
5s
21s
> Task :mergeDebugJavaResource
> Task :mergeDebugAssets
> Task :parseDebugLocalResources
> Task :compressDebugAssets
> Task :mergeLibDexDebug
> Task :validateSigningDebug
> Task :mergeDebugJniLibFolders
> Task :writeDebugAppMetadata
> Task :mergeDebugNativeLibs NO-SOURCE
> Task :stripDebugDebugSymbols NO-SOURCE
> Task :writeDebugSigningConfigVersions
> Task :mergeDebugResources
> Task :desugarDebugFileDependencies
> Task :processDebugResources

> Task :compileDebugJavaWithJavac
/home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/ClipboardHistoryService.java:171: error: cannot find symbol
    String timestamp = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm:ss", java.util.Locale.getDefault()).format(new java.text.Date());
                                                                                                                                ^
  symbol:   class Date
  location: package java.text
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

> Task :compileDebugJavaWithJavac FAILED
> Task :mergeExtDexDebug
gradle/actions: Writing build results to /home/runner/work/_temp/.gradle-actions/build-results/__run_2-1772618739807.json

[Incubating] Problems report is available at: file:///home/runner/work/Keyboard/Keyboard/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/Keyboard/Keyboard/srcs/juloo.keyboard2/ClipboardHistoryService.java:171: error: cannot find symbol
      String timestamp = new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm:ss", java.util.Locale.getDefault()).format(new java.text.Date());
                                                                                                                                  ^
    symbol:   class Date
    location: package java.text
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some input files use unchecked or unsafe operations.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 21s
32 actionable tasks: 32 executed
Configuration cache entry stored.
Error: Process completed with exit code 1.
0s
0s
1s
0s
0s
0s
